--- a/packages/bruce-ui/src/components/button/index.scss
+++ b/packages/bruce-ui/src/components/button/index.scss
@@ -27,7 +27,7 @@
 		font-size: 16px;
 	}
 	&.muted {
-		background-color: $background;
+		background-color: $secondary;
 	}
 	&:hover {
 		opacity: .8;
